--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -449,13 +449,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ak0-HZ-F5s">
-                                                    <rect key="frame" x="105" y="81" width="459" height="20"/>
+                                                    <rect key="frame" x="105" y="81" width="459" height="22"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="LIU-Cp-dbB"/>
+                                                        <constraint firstAttribute="height" constant="22" id="LIU-Cp-dbB"/>
                                                     </constraints>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="5" id="FB9-79-Bk4">
-                                                        <size key="itemSize" width="20" height="20"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="3" minimumInteritemSpacing="3" id="FB9-79-Bk4">
+                                                        <size key="itemSize" width="22" height="22"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -465,15 +465,23 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic-twitter" translatesAutoresizingMaskIntoConstraints="NO" id="5Eu-3T-RFI">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-twitter-color" translatesAutoresizingMaskIntoConstraints="NO" id="5Eu-3T-RFI">
+                                                                        <rect key="frame" x="1" y="1" width="20" height="20"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="20" id="0vP-cq-NA4"/>
+                                                                            <constraint firstAttribute="width" constant="20" id="qak-yv-ZcF"/>
+                                                                        </constraints>
                                                                     </imageView>
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
+                                                            <constraints>
+                                                                <constraint firstAttribute="centerX" secondItem="5Eu-3T-RFI" secondAttribute="centerX" id="Wa0-AK-WXa"/>
+                                                                <constraint firstAttribute="centerY" secondItem="5Eu-3T-RFI" secondAttribute="centerY" id="w5J-WP-l7O"/>
+                                                            </constraints>
                                                             <connections>
                                                                 <outlet property="imageView" destination="5Eu-3T-RFI" id="Jj8-gD-415"/>
                                                             </connections>
@@ -1983,7 +1991,6 @@
         <image name="ic-more" width="29" height="7"/>
         <image name="ic-play-small" width="22" height="22"/>
         <image name="ic-start-chat" width="50" height="30"/>
-        <image name="ic-twitter" width="28" height="28"/>
         <image name="ic-twitter-color" width="28" height="28"/>
         <image name="ic-video" width="42" height="26"/>
         <image name="sample-cover-image" width="750" height="368"/>
